# castor

./: README.md  pyproject.toml
docs/: agent-design-patterns.md  agent-loop-design.md
docs/plans/: 2026-03-04-agent-loop-design.md  2026-03-04-agent-loop-impl.md
src/castor/: __init__.py  loop.py  provider.py  tool.py  types.py
tests/: test_loop.py  test_provider.py  test_tool.py  test_types.py
